--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -66,11 +66,11 @@
     <Compile Include="Interactivity\Behaviours\InterceptClosingBehaviourBase.cs" />
     <Compile Include="Interactivity\Behaviours\RequestClosePermissionBehaviour.cs" />
     <Compile Include="Integration\DataTemplateConfigurationRunner.cs" />
-    <Compile Include="_sort\DataTemplateManager.cs" />
+    <Compile Include="Integration\DataTemplateManager.cs" />
     <Compile Include="Interactivity\BusyState.cs" />
-    <Compile Include="ViewModel\Mapping\DefaultConventionMapper.cs" />
-    <Compile Include="ViewModel\Mapping\FrameworkElementInitializerFactory.cs" />
-    <Compile Include="Abstraction\Interactivity\IBehaviour.cs" />
+    <Compile Include="_sort\DefaultConventionMapper.cs" />
+    <Compile Include="_sort\FrameworkElementInitializerFactory.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IBehaviour.cs" />
     <Compile Include="_sort\IDataTemplateMapper.cs" />
     <Compile Include="Abstraction\Interactivity\IInteractive.cs" />
     <Compile Include="Extensions\InteractiveExtensions.cs" />
@@ -78,8 +78,8 @@
     <Compile Include="Abstraction\ViewModel\Mapping\IViewModelTypeSource.cs" />
     <Compile Include="Abstraction\ViewModel\Mapping\IViewModelWindowFactory.cs" />
     <Compile Include="Abstraction\ViewModel\Mapping\IViewTypeSource.cs" />
-    <Compile Include="Abstraction\Interactivity\IWindowCloseBehaviour.cs" />
-    <Compile Include="Abstraction\Interactivity\IWindowCloseBehaviourContext.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowCloseBehaviour.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowCloseBehaviourContext.cs" />
     <Compile Include="Interactivity\ActivationContext.cs" />
     <Compile Include="Interactivity\DeactivationContext.cs" />
     <Compile Include="_sort\FrameworkElementInitializer.cs" />
@@ -89,28 +89,28 @@
     <Compile Include="Abstraction\Interactivity\IDeactivate.cs" />
     <Compile Include="Abstraction\Interactivity\IDeactivationContext.cs" />
     <Compile Include="Abstraction\Navigation\INavigationService.cs" />
-    <Compile Include="Abstraction\UI\IRegionManager.cs" />
+    <Compile Include="Abstraction\Integration\IRegionManager.cs" />
     <Compile Include="Abstraction\ViewModel\Mapping\IViewModelInitializer.cs" />
     <Compile Include="Abstraction\ViewModel\Mapping\IViewModelInitializerFactory.cs" />
     <Compile Include="Abstraction\ViewModel\Mapping\IViewModelVisualizerFactory.cs" />
-    <Compile Include="Abstraction\UI\IWindowManager.cs" />
+    <Compile Include="Abstraction\Integration\IWindowManager.cs" />
     <Compile Include="Navigation\NavigationService.cs" />
     <Compile Include="_sort\ViewModelInitializerBase.cs" />
     <Compile Include="_sort\ViewModelInitializerContext.cs" />
     <Compile Include="_sort\ViewModelVisualizerFactory.cs" />
-    <Compile Include="_sort\WindowManager.cs" />
+    <Compile Include="Integration\WindowManager.cs" />
     <Compile Include="_sort\WindowVisualizer.cs" />
-    <Compile Include="_sort\WindowCloseContext.cs" />
-    <Compile Include="_sort\WindowDeactivatorSession.cs" />
+    <Compile Include="Interactivity\Window\WindowCloseContext.cs" />
+    <Compile Include="Interactivity\Window\WindowDeactivatorSession.cs" />
     <Compile Include="_sort\WindowInitializer.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_sort\RegionManager.cs" />
+    <Compile Include="Integration\RegionManager.cs" />
     <Compile Include="UI\RelayCommand.cs" />
     <Compile Include="Abstraction\Interactivity\IBusyStateHolder.cs" />
     <Compile Include="Abstraction\UI\IDialogService.cs" />
-    <Compile Include="ViewModel\Mapping\ViewModelActivator.cs" />
-    <Compile Include="ViewModel\Mapping\ViewModelActivatorContext.cs" />
+    <Compile Include="_sort\ViewModelActivator.cs" />
+    <Compile Include="_sort\ViewModelActivatorContext.cs" />
     <Compile Include="ViewModel\ContentViewModel.cs" />
     <Compile Include="Abstraction\ViewModel\IContentViewModel.cs" />
     <Compile Include="_sort\ICoordinationArguments.cs" />
@@ -121,7 +121,7 @@
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="_sort\WindowArguments.cs" />
     <Compile Include="ViewModel\WindowViewModel.cs" />
-    <Compile Include="ViewModel\Mapping\WindowViewModelInitializerFactory.cs" />
+    <Compile Include="_sort\WindowViewModelInitializerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Company.Desktop.Framework\Company.Desktop.Framework.csproj">
