--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/packages.config
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="NLog" version="4.5.11" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
 </packages>
