--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
@@ -70,6 +74,7 @@
     <Compile Include="Abstraction\Integration\Composer\IViewComposerFactory.cs" />
     <Compile Include="Abstraction\Integration\Composer\IViewComposerHook.cs" />
     <Compile Include="Abstraction\Integration\Composer\IViewCompositionContext.cs" />
+    <Compile Include="Abstraction\Integration\ViewMapping\IRegexDataTemplatePatternProvider.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IActivationBehaviour.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IActivationBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IContentChangingBehaviour.cs" />
@@ -78,7 +83,8 @@
     <Compile Include="Extensions\ActivationContextExtensions.cs" />
     <Compile Include="Integration\Composer\Hooks\DataContextLoadedHook.cs" />
     <Compile Include="Integration\Composer\Hooks\WindowClosingHook.cs" />
-    <Compile Include="Integration\ViewMapping\DefaultConventionMapper.cs" />
+    <Compile Include="Integration\ViewMapping\InlineMvvmPattern.cs" />
+    <Compile Include="Integration\ViewMapping\DefaultRegexTemplateMapper.cs" />
     <Compile Include="Integration\ViewMapping\FrameworkElementCoordinator.cs" />
     <Compile Include="Abstraction\Integration\ViewMapping\IDisplayCoordinator.cs" />
     <Compile Include="Integration\ViewMapping\RegionArguments.cs" />
