--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2018.2.1.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2018.2.1\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Extensions.DependencyInjection, Version=2.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Extensions.DependencyInjection.2.1.1\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
     </Reference>
@@ -129,7 +132,6 @@
     <Compile Include="Integration\ViewMapping\WindowManager.cs" />
     <Compile Include="Interactivity\Window\WindowCloseContext.cs" />
     <Compile Include="Interactivity\Window\WindowDeactivatorSession.cs" />
-    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Integration\ViewMapping\RegionManager.cs" />
     <Compile Include="UI\RelayCommand.cs" />
