--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/packages.config
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JetBrains.Annotations" version="2018.2.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="NLog" version="4.5.11" targetFramework="net462" />
