--- a/templateSources/WpfApplication/Company.Desktop.Models.Abstraction/Company.Desktop.Models.Abstraction.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Models.Abstraction/Company.Desktop.Models.Abstraction.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
   </ItemGroup>
