--- a/templateSources/WpfApplication/Company.Desktop.Application/packages.config
+++ b/templateSources/WpfApplication/Company.Desktop.Application/packages.config
@@ -13,4 +13,8 @@
   <package id="System.Composition.Hosting" version="1.2.0" targetFramework="net461" />
   <package id="System.Composition.Runtime" version="1.2.0" targetFramework="net461" />
   <package id="System.Composition.TypedParts" version="1.2.0" targetFramework="net461" />
+  <package id="System.Reactive" version="4.1.2" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
