--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -53,10 +53,25 @@
     <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
     </Reference>
+    <Reference Include="System.Reactive, Version=4.1.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reactive.4.1.2\lib\net46\System.Reactive.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -82,6 +97,8 @@
     <Compile Include="Abstraction\Interactivity\Behaviours\IActivationBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IContentChangingBehaviour.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IContentChangingBehaviourContext.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosedBehaviour.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosedBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\IBehaviourProvider.cs" />
     <Compile Include="Extensions\ActivationContextExtensions.cs" />
     <Compile Include="Integration\Composer\Hooks\DataContextLoadedHook.cs" />
@@ -102,10 +119,13 @@
     <Compile Include="Integration\ViewMapping\WindowCoordinator.cs" />
     <Compile Include="Interactivity\Behaviours\ActivationBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\ActivationBehaviourContext.cs" />
-    <Compile Include="Interactivity\Behaviours\CloseTracingBehaviour.cs" />
+    <Compile Include="Interactivity\Behaviours\BehaviourBase.cs" />
+    <Compile Include="Interactivity\Behaviours\ClosedBehaviourBase.cs" />
+    <Compile Include="Interactivity\Behaviours\ClosingTracingBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\ConfirmContentChangingBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\ContentChangingBehaviourBase.cs" />
     <Compile Include="Interactivity\Behaviours\ContentChangingBehaviourContext.cs" />
+    <Compile Include="Interactivity\Behaviours\DisposeOnCloseBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\InterceptClosingBehaviourBase.cs" />
     <Compile Include="Interactivity\Behaviours\RequestClosePermissionBehaviour.cs" />
     <Compile Include="Integration\Environment\DataTemplateConfigurationRunner.cs" />
@@ -116,8 +136,8 @@
     <Compile Include="Extensions\InteractiveExtensions.cs" />
     <Compile Include="Abstraction\Integration\Environment\IViewModelTypeSource.cs" />
     <Compile Include="Abstraction\Integration\Environment\IViewTypeSource.cs" />
-    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowCloseBehaviour.cs" />
-    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowCloseBehaviourContext.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosingBehaviour.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosingBehaviourContext.cs" />
     <Compile Include="Interactivity\ActivationContext.cs" />
     <Compile Include="Interactivity\DeactivationContext.cs" />
     <Compile Include="Abstraction\Interactivity\IActivateable.cs" />
@@ -128,9 +148,10 @@
     <Compile Include="Abstraction\Integration\ViewMapping\IRegionManager.cs" />
     <Compile Include="Abstraction\Integration\ViewMapping\IDisplayCoordinatorFactory.cs" />
     <Compile Include="Abstraction\Integration\ViewMapping\IWindowManager.cs" />
+    <Compile Include="Interactivity\Window\WindowClosedContext.cs" />
     <Compile Include="Navigation\NavigationService.cs" />
     <Compile Include="Integration\ViewMapping\WindowManager.cs" />
-    <Compile Include="Interactivity\Window\WindowCloseContext.cs" />
+    <Compile Include="Interactivity\Window\WindowClosingContext.cs" />
     <Compile Include="Interactivity\Window\WindowDeactivatorSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Integration\ViewMapping\RegionManager.cs" />
