--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/packages.config
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/packages.config
@@ -5,4 +5,8 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="NLog" version="4.5.11" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
+  <package id="System.Reactive" version="4.1.2" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
