--- a/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="NLog" Version="4.5.11" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
     <PackageReference Include="System.Composition" Version="1.2.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
 </Project>
