--- a/templateSources/WpfApplication/Company.Desktop.Models.Abstraction/Company.Desktop.Models.Abstraction.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Models.Abstraction/Company.Desktop.Models.Abstraction.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
