--- a/templateSources/WpfApplication/Company.Desktop.Shared/Company.Desktop.Shared.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Shared/Company.Desktop.Shared.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
