--- a/templateSources/WpfApplication/Company.Desktop.ViewModels/Company.Desktop.ViewModels.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.ViewModels/Company.Desktop.ViewModels.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="NLog" Version="4.5.11" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
 </Project>
