--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -93,13 +93,10 @@
     <Compile Include="Abstraction\Integration\Composer\IViewComposerHook.cs" />
     <Compile Include="Abstraction\Integration\Composer\IViewCompositionContext.cs" />
     <Compile Include="Abstraction\Integration\ViewMapping\IRegexDataTemplatePatternProvider.cs" />
-    <Compile Include="Abstraction\Interactivity\Behaviours\IActivationBehaviour.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IActivationBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IContentChangingBehaviour.cs" />
-    <Compile Include="Abstraction\Interactivity\Behaviours\IContentChangingBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosedBehaviour.cs" />
-    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosedBehaviourContext.cs" />
-    <Compile Include="Abstraction\Interactivity\IBehaviourProvider.cs" />
+    <Compile Include="Abstraction\Interactivity\IDefaultBehaviourProvider.cs" />
     <Compile Include="Abstraction\UI\IWindowListener.cs" />
     <Compile Include="Extensions\ActivationContextExtensions.cs" />
     <Compile Include="Integration\Composer\Hooks\DataContextLoadedHook.cs" />
@@ -120,21 +117,20 @@
     <Compile Include="Integration\ViewMapping\WindowCoordinator.cs" />
     <Compile Include="Interactivity\Behaviours\ActivationBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\ActivationBehaviourContext.cs" />
+    <Compile Include="Interactivity\Behaviours\AsyncBehaviourBase.cs" />
     <Compile Include="Interactivity\Behaviours\BehaviourBase.cs" />
-    <Compile Include="Interactivity\Behaviours\ClosedBehaviourBase.cs" />
+    <Compile Include="Interactivity\Behaviours\BehaviourRunner.cs" />
     <Compile Include="Interactivity\Behaviours\ClosingTracingBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\ConfirmContentChangingBehaviour.cs" />
-    <Compile Include="Interactivity\Behaviours\ContentChangingBehaviourBase.cs" />
     <Compile Include="Interactivity\Behaviours\ContentChangingBehaviourContext.cs" />
     <Compile Include="Interactivity\Behaviours\DisposeOnCloseBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\InterceptClosingBehaviourBase.cs" />
-    <Compile Include="Interactivity\Behaviours\RequestClosePermissionBehaviour.cs" />
+    <Compile Include="Interactivity\Behaviours\RequestClosingPermissionBehaviour.cs" />
     <Compile Include="Integration\Environment\DataTemplateConfigurationRunner.cs" />
     <Compile Include="Integration\ViewMapping\DataTemplateManager.cs" />
     <Compile Include="Interactivity\BusyState.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IBehaviour.cs" />
-    <Compile Include="Abstraction\Interactivity\IInteractive.cs" />
-    <Compile Include="Extensions\InteractiveExtensions.cs" />
+    <Compile Include="Abstraction\Interactivity\IBehaviourHost.cs" />
     <Compile Include="Abstraction\Integration\Environment\IViewModelTypeSource.cs" />
     <Compile Include="Abstraction\Integration\Environment\IViewTypeSource.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosingBehaviour.cs" />
