--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Abstraction\Interactivity\IDefaultBehaviourProvider.cs" />
     <Compile Include="Abstraction\UI\IWindowListener.cs" />
     <Compile Include="Extensions\ActivationContextExtensions.cs" />
+    <Compile Include="Extensions\WindowExtensions.cs" />
     <Compile Include="Integration\Composer\Hooks\DataContextLoadedHook.cs" />
     <Compile Include="Integration\Composer\Hooks\WindowClosingHook.cs" />
     <Compile Include="Integration\ViewMapping\InlineMvvmPattern.cs" />
