--- a/templateSources/WpfApplication/Company.Desktop.Application/packages.config
+++ b/templateSources/WpfApplication/Company.Desktop.Application/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net462" />
   <package id="JetBrains.Annotations" version="2018.2.1" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="NLog" version="4.5.11" targetFramework="net461" />
