--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -94,11 +94,14 @@
     <Compile Include="Abstraction\Integration\Composer\IViewCompositionContext.cs" />
     <Compile Include="Abstraction\Integration\ViewMapping\IRegexDataTemplatePatternProvider.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IActivationBehaviourContext.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\ICompositionBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\Behaviours\IContentChangingBehaviour.cs" />
-    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosedBehaviour.cs" />
+    <Compile Include="Abstraction\Interactivity\Behaviours\IWindowClosedBehaviourContext.cs" />
     <Compile Include="Abstraction\Interactivity\IDefaultBehaviourProvider.cs" />
+    <Compile Include="Abstraction\UI\IProgressController.cs" />
     <Compile Include="Abstraction\UI\IWindowListener.cs" />
     <Compile Include="Extensions\ActivationContextExtensions.cs" />
+    <Compile Include="Extensions\FrameworkElementExtensions.cs" />
     <Compile Include="Extensions\WindowExtensions.cs" />
     <Compile Include="Integration\Composer\Hooks\DataContextLoadedHook.cs" />
     <Compile Include="Integration\Composer\Hooks\WindowClosingHook.cs" />
@@ -122,6 +125,7 @@
     <Compile Include="Interactivity\Behaviours\BehaviourBase.cs" />
     <Compile Include="Interactivity\Behaviours\BehaviourRunner.cs" />
     <Compile Include="Interactivity\Behaviours\ClosingTracingBehaviour.cs" />
+    <Compile Include="Interactivity\Behaviours\CompositionBehaviourContext.cs" />
     <Compile Include="Interactivity\Behaviours\ConfirmContentChangingBehaviour.cs" />
     <Compile Include="Interactivity\Behaviours\ContentChangingBehaviourContext.cs" />
     <Compile Include="Interactivity\Behaviours\DisposeOnCloseBehaviour.cs" />
@@ -153,6 +157,7 @@
     <Compile Include="Interactivity\Window\WindowDeactivatorSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Integration\ViewMapping\RegionManager.cs" />
+    <Compile Include="UI\ProgressController.cs" />
     <Compile Include="UI\RelayCommand.cs" />
     <Compile Include="Abstraction\Interactivity\IBusyStateHolder.cs" />
     <Compile Include="Abstraction\UI\IDialogService.cs" />
