--- a/templateSources/WpfApplication/Company.Desktop.Application/packages.config
+++ b/templateSources/WpfApplication/Company.Desktop.Application/packages.config
@@ -5,6 +5,7 @@
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
   <package id="NLog" version="4.5.11" targetFramework="net461" />
   <package id="NLog.Config" version="4.5.11" targetFramework="net461" />
   <package id="NLog.Schema" version="4.5.11" targetFramework="net461" />
